# Cuda-Fractal-Generator

./: .gitignore  CMakeLists.txt  README.md  complex.cuh  fractal.cuh  main.cu  render.cuh
.cache/clangd/index/: complex.h.1EEAA5387D34C2EE.idx  main.cxx.7A1833B470D38047.idx
